# validate-fields-macro

./: Cargo.toml  README.md
example/: Cargo.toml  application.yml
example/src/: main.rs
src/: lib.rs  main.rs
