[package]
name = "validate_fields_macro"
version = "0.0.1"
authors = ["Raimi bin Karim <raimi.bkarim@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
proc-macro2 = { version = "1.0.43", features = ["nightly"] }
quote = "1.0.21"
serde_yaml = "0.9.10"
syn = { version = "1.0.99", features = ["full"] }

[lib]
proc-macro = true
